_sass/main.scss
/* ... */
#datetime {
    @media print {
        display: none;
    }
    @include max-screen(720px) {
        display: none;
    }
    margin-bottom: 12px;
    
    table {
        width: 100%;
        tr {
            margin: 0;
            padding: 0;
            td {
                margin: 0;
                padding: 0;
                white-space: nowrap;
            }
        }
    }

    p {
        font-family: $font_sidebar;
        font-size: $font_size_sidebar - 1;
        line-height: $font_size_sidebar + 2;
        margin: 0;
        padding: 0;
        &.label {
            text-align: left;
        }
        &.datetime {
            text-align: center;
        }
        &.datetime24 {
            text-align: center;
        }
    }
}

#nav_left {
    @media print {
        display: none;
    }
    @include min-screen(721px) {
        display: none;
    }
    
    border-radius: 3px;
    padding: 12px 15px 15px 15px;
    background: $color_sidebar_bg;
    margin-bottom: 12px;

    ul {
        margin: 3px 0 0 0;
        padding: 0;
        
        li {
            
            list-style-type: none;
            padding: 0;
            a {
                @include button;
                @include left_button;
                text-align: left;
                background-color: transparent;
                &:hover {
                    background-color: $color_button_hover_bg;
                }
                display: block;
            }
        }
    }
}

#random_quotes_block {

    @include sidebar_component;
    @media print {
        display: none;
    }
    
    div.random_quotes {
        div.quote {
        
            p {
                font-family: $font_quote;
                font-size: $font_size_quote;
                @include max-screen(720px) {
                    font-size: $font_size_quote + 1;
                }
                font-style: normal;
                line-height: $font_line_height_quote;
                letter-spacing: 0.25px;
                color: $color_quote_text;
                margin-top: 0px;
                margin-bottom: 0px;

                i.fa-quote-left {
                    color: lighten($color_sidebar_label, 15%);
                }
            }
            
            table {
                border-collapse: collapse;
                margin: 3px 0px 0px 0px;
                padding: 0px;
            }
            table tbody {
                tr {
                    margin: 0px;
                    padding: 0px;
                    
                    td {
                        margin: 0px;
                        padding: 0px;

                        p {
                            margin: 0px;
                            padding: 0px;
                            
                            font-family: $font_quote_author;
                            font-size: $font_size_quote_author;
                            font-weight: normal;

                            &.qauthor {
                                font-style: normal;
                                text-transform: uppercase;
                                color: $color_quote_author;
                                // To center the author with the emdash on the left column
                                padding-top: 2px;
                            }
                            &.context {
                                color: lighten($color_quote_author, 20%);
                            }
                        }
                    }
                }
            }
        }
    }
}

#announcements_block {
    @media print {
        display: none;
    }
    @include sidebar_component;
    @include max-screen(720px) {
        margin-top: 20px;
    }
    
    div.announcements {
        div.announcement {
            @include component_entry;
           
            div.announcement_heading {
                div.image {
                    background: $color_image_bg;
                    padding: 5px 5px 5px 5px;
                    margin: 5px 0px 5px 0;
                    p.attribution {
                        font-size: $font_size_page_meta - 2;
                        font-style: italic;
                        line-height: $font_size_page_meta - 6;
                        color: $color_image_attribution;
                        text-align: right;
                        padding: 2px 0px 3px 0px;
                        margin: 2px 0 0 0;
                    }
                }
                h2 {
                    font-family: $font_announcement_title;
                    font-size: $font_size_announcement_title;
                    font-weight: bold;
                    color: $color_announcement_title;
                    text-transform: uppercase;
                    @include component_entry_heading;
                }
            }
            
            @include component_entry_content;
        
            p, li, a {
                font-family: $font_announcement_text;
                font-size: $font_size_announcement_text;
                color: $color_announcement_text;
                &.date {
                    font-family: $font_announcement_date;
                    font-size: $font_size_announcement_date;
                    color: $color_announcement_date;
                }
                em {
                    font-style: italic;
                }
            }
            li {
                line-height: $font_size_info_text;
            }
        }
    }
}
/* ... */

